[gd_scene load_steps=3 format=3 uid="uid://dns7n64gaubxo"]

[ext_resource type="Script" path="res://listBotControl.gd" id="1_pvoaf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_40sle"]
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="listBot" type="Control"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1180.0
offset_bottom = -670.0
grow_horizontal = 2
grow_vertical = 2
metadata/conntectedBot = NodePath("")

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 0
offset_left = 25.0
offset_right = 75.0
offset_bottom = 50.0
theme_override_styles/normal = SubResource("StyleBoxFlat_40sle")
script = ExtResource("1_pvoaf")

[node name="backBut" type="Button" parent="Button"]
layout_mode = 0
offset_left = -15.0
offset_top = 21.0
offset_right = -7.0
offset_bottom = 29.0

[node name="forwardBut" type="Button" parent="Button"]
layout_mode = 0
offset_left = 57.0
offset_top = 21.0
offset_right = 65.0
offset_bottom = 29.0

[node name="deleteBut" type="Button" parent="Button"]
layout_mode = 0
offset_left = 21.0
offset_top = 21.0
offset_right = 29.0
offset_bottom = 29.0

[connection signal="focus_exited" from="Button" to="Button" method="_on_focus_exited"]
[connection signal="pressed" from="Button" to="Button" method="_on_pressed"]
[connection signal="pressed" from="Button/backBut" to="Button" method="_on_back_but_pressed"]
[connection signal="pressed" from="Button/forwardBut" to="Button" method="_on_forward_but_pressed"]
[connection signal="pressed" from="Button/deleteBut" to="Button" method="_on_delete_but_pressed"]
